Major cleanup before reimplementing individual repo